--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .app {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     outline: 2px solid pink;
-    margin: 0;
-    background-color: rgb(176, 242, 8);
+    background-color: var(--whiteColor);
+    display: flex;
+    flex-direction: column;
 }
