--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,4 +1,21 @@
+.header {
+    padding: 15px;
+    margin-bottom: 30px;
+    background-color: var(--hoverBackgroundColor);
+    color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .title {
-    background-color: blueviolet;
+    padding: 5px;
+    font-weight: 500;
+    letter-spacing: 2px;
     color: white;
+}
+
+.subtitle {
+    font-weight: 200;
 }
