--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    
+    /* outline: 1px solid red;     */
 }
 
 
