--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* outline: 1px solid red; */
 }
 
 .title {
