--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -52,7 +52,7 @@
     background-color: #4a6584;
     width: 150px;
     height: 50px;
-    border: none;
+    border: 1px solid rgba(95, 87, 132, 0.5);
     border-radius: 50px;
     color: rgba(255, 255, 255, 0.7);
     letter-spacing: 1px;
