--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,13 +1,27 @@
-.header {
-    padding: 15px;
-    margin-bottom: 30px;
+.wrapper {
+    display: flex;
     background-color: var(--hoverBackgroundColor);
+    height: 90px;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 30px;
+    padding: 10px 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.image {
+    width: 70px;
+    border-radius: 10px;
+}
+
+.header {
     color: rgba(255, 255, 255, 0.8);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* outline: 1px solid red; */
 }
 
 .title {
@@ -20,3 +34,20 @@
 .subtitle {
     font-weight: 200;
 }
+
+.links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.links a {
+    color: rgba(255, 255, 255, 0.8);
+    text-decoration: none;
+}
+
+.links a:hover {
+    border-bottom: 1px solid white;
+}
+
