--- a/src/components/Content/Card/Card.module.css
+++ b/src/components/Content/Card/Card.module.css
@@ -1,7 +1,6 @@
 .wrapper {
     height: 450px;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 0 25px;
@@ -17,7 +16,6 @@
     justify-content: center;
     align-items: center;
     border: 1px solid white;
-    margin-bottom: 30px;
 
 }
 
@@ -54,15 +52,13 @@
     background-color: #4a6584;
     width: 150px;
     height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: none;
     border-radius: 50px;
     color: rgba(255, 255, 255, 0.7);
     letter-spacing: 1px;
     font-size: 15px;
     cursor: pointer;
-    outline: none;
-    box-shadow: 0 0 0 0 rgba(52, 143, 80, 0.7);
-    transition: box-shadow 0.3s ease-in-out;
+    transition: all 0.3s ease;
 
 }
 
@@ -72,29 +68,11 @@ color: white;
 border: 1px solid var(--hoverBackgroundColor);
 }
 
-.button:focus {
-    box-shadow: 0 0 0 10px rgba(52, 143, 80, 0); /* Тень с пульсирующим эффектом */
-    animation: pulse 1s infinite; /* Анимация пульсации */
-}
-
-@keyframes pulse {
-    0% {
-      box-shadow: 0 0 0 0 rgba(52, 143, 80, 0.9);
-    }
-    50% {
-      box-shadow: 0 0 0 20px rgba(52, 143, 80, 0);
-    }
-    100% {
-      box-shadow: 0 0 0 0 rgba(52, 143, 80, 0);
-    }
-  }
-  
-
 .translationWrapper {
     background-color: #4a6584;
     width: 150px;
     height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+    border: none;
     border-radius: 50px;
     color: rgba(255, 255, 255, 0.7);
     transition: all 0.3s ease;
@@ -107,10 +85,5 @@ border: 1px solid var(--hoverBackgroundColor);
 .translation {
     color: white;
     font-size: 25px;
-}
 
-.counter {
-    color: white;
-    font-size: 17px;
 }
-
