--- a/src/components/MissingPage/MissingPage.module.css
+++ b/src/components/MissingPage/MissingPage.module.css
@@ -2,7 +2,7 @@
     margin-top: 110px;
     width: 100%;
     height: 100%;
-    background-image: url('/public/compass1.png');
+    background-image: url('/public/compass.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
