добавлен функционал mobx

--- a/src/components/WordList/WordList.module.css
+++ b/src/components/WordList/WordList.module.css
@@ -123,3 +123,9 @@ button:hover {
   opacity: 0.5; /* Уменьшаем прозрачность */
   cursor: not-allowed; /* Запрещаем изменение курсора */
 }
+
+.fetchError {
+	font-size: 25px;
+	color: white;
+	padding-left: 15px;
+}
