--- a/src/components/Card/CardWrapper.module.css
+++ b/src/components/Card/CardWrapper.module.css
@@ -26,3 +26,9 @@
         border: 1px solid var(--hoverBackgroundColor);
 }
 
+.fetchError {
+	font-size: 25px;
+	color: white;
+	padding-left: 15px;
+	padding-top: 150px;
+}
